--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -73,8 +73,9 @@ body {
 
 .hero1button {
     border-radius: 1.625rem;
-    background: var(--verde, #67FF20);
-    box-shadow: 0px -1px 34px 0px #67FF20;
+    border-color: #67FF20;
+    border: none;
+    background: #67FF20;
     display: inline-flex;
     padding: 0.8125rem 1.625rem;
     justify-content: center;
@@ -83,6 +84,12 @@ body {
     position: absolute;
     margin: 40.69rem 83.5rem 11.19rem 11.06rem;
     text-wrap: nowrap;
+    transition: 0.5s;
+}
+
+.hero1button:hover{
+    box-shadow: 0px -1px 34px 0px #67FF20;
+    scale: 105%;
 }
 
 .hero1button a {
