some changes in css margin

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -23,13 +23,13 @@ body {
 .hero1 .hero1text1 {
     color: #ffffff;
     font-family: Roboto;
-    font-size: 1.25rem;
+    font-size: 20px;
     font-style: italic;
     font-weight: 400;
     line-height: normal;
     text-wrap: nowrap;
     position: absolute;
-    margin: 17.69rem 76rem 34.19rem 9.44rem;
+    margin: 283px 1216px 547px 151px;
 }
 
 .hero1 .hero1text2 {
