--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -11,10 +11,11 @@ body {
 .hero1 {
     background: url(../images/hero1bg.jpg);
     background-repeat: no-repeat;
-    margin: 2.38rem 0rem 7.81rem 10.56rem;
-    width: 109.4375rem;
-    height: 58.75rem;
-    max-width: 100vw;
+    margin: -80px 0px 125px 169px;
+    width: 1920px;
+    height: 1080px;
+    flex-shrink: 0;
+    max-width: 100%;
     flex-shrink: 0;
     background-size: cover;
     box-sizing: border-box;
