--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 #header {
     width: 100%;
     height: 100vh;
-    background: url(/assets/images/hero1bg.jpg);
+    background: url(assets/images/hero1bg.jpg);
     background-size: cover;
     background-position: center;
 }
